--- a/_includes/partials/notebook_header.njk
+++ b/_includes/partials/notebook_header.njk
@@ -4,12 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} ing griyanipun Damar</title>
-    <link rel="stylesheet" href="{{ '/assets/blogstyle.css' }}" />
-    <link rel="stylesheet" href="{{ '/assets/fonts.css' }}" />
+    <title>{{ title }} | Damar's Notebook</title>
+    <link rel="stylesheet" href="{{ '/assets/tufte.css' }}" />
     <link rel="icon" type="image/x-icon" href="{{ '/assets/favicon.jpg' }}">
     <meta name="theme-color" content="#edeaea" />
 </head>
-
-<body>
-    <div id="container">
