content: change date style in tuftecss

--- a/assets/tufte.css
+++ b/assets/tufte.css
@@ -484,3 +484,9 @@ label.margin-toggle:not(.sidenote-number) {
         width: 100%;
     }
 }
+
+/* Custom CSS */
+
+p.byline {
+    font-size: 1.2rem;
+}
