add new css layouts

--- a/_includes/arsip.njk
+++ b/_includes/arsip.njk
@@ -1,4 +1,4 @@
-{% include "partials/notebook_header.njk" %}
+{% include "partials/guide_header.njk" %}
 
 <body>
     <article>
@@ -15,4 +15,4 @@
     </article>
 </body>
 
-{% include "partials/notebook_footer.njk" %}
+{% include "partials/guide_footer.njk" %}
